--- a/main.html
+++ b/main.html
@@ -7,7 +7,25 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Chandigarh</h1>
+	<br>
+	<p>Chandigarh is a city and union territory in northern India. It's the capital of the states of Punjab and Haryana. Chandigarh is ruled directly by the Union Government of India and is not part of either state. 
+</p>
+	
+	<ol>
+		<li><em>Sukhna k]lake</em></li>
+		<li><em>Rose garden</em></li>
+		<li><em>Sector - 17</em></li>
+		<li><em>Elante</em></li>
+		<li><em>Pinjor</em></li>
+	</ol>
+	<ul>
+		<li><em>Butter chicken </em></li>
+		<li><em>Masala chicken</em></li>
+		<li><em>Butter naan</em></li>
+		<li><em>Bhature</em></li>
+		<li><em>Chilly chicken </em></li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
