--- a/main.html
+++ b/main.html
@@ -13,18 +13,18 @@
 </p>
 	
 	<ol>
-		<li><em>Sukhna k]lake</em></li>
-		<li><em>Rose garden</em></li>
-		<li><em>Sector - 17</em></li>
-		<li><em>Elante</em></li>
-		<li><em>Pinjor</em></li>
+		<li><b><i>Sukhna k]lake</i></b></li>
+		<li><b><i>Rose garden</i></b>b></li>
+		<li><b><i>Sector - 17</i></b></li>
+		<li><b><i>Elante</i></b></li>
+		<li><b><i>Pinjor</i></b></li>
 	</ol>
 	<ul>
-		<li><em>Butter chicken </em></li>
-		<li><em>Masala chicken</em></li>
-		<li><em>Butter naan</em></li>
-		<li><em>Bhature</em></li>
-		<li><em>Chilly chicken </em></li>
+		<li><b><i>Butter chicken </i></b></li>
+		<li><b><i>Masala chicken</i></b></li>
+		<li><b><i>Butter naan</i></b></li>
+		<li><b><i>Bhature</i></b></li>
+		<li><b><i>Chilly chicken </i></b></li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
